# PaniniFS

./: .gitignore  .gitmodules  .nojekyll  APPLICATIONS_POTENTIELLES_STRATEGIQUES.md  ARTICLE_MEDIUM_2025.md  ARTICLE_MEDIUM_2025_EN.md  ARTICLE_MEDIUM_FINAL_2025.md  ARTICLE_MEDIUM_FINAL_2025_EN.md  AUDIT_COHERENCE_CONCEPTUELLE_2025.md  AUDIT_CRITIQUE_COLAB.md  AUDIT_SYNCHRONISATION_GITHUB.md  AUTONOMOUS_MISSION_REPORT.md  BABY_SIGN_LANGUAGE_FOUNDATION.md  CENTRALISATION_DISCUSSIONS_COPILOTAGE.md  CNAME  COHERENCE_RESOLUTION_PLAN.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Cargo.toml  DECOUVERTE_DHATU_CORE_SET.md  DEPLOYMENT.md  DHATU_ATOMES_CONCEPTUELS_REVISION.md  DOMAINES_STRATEGY.md  EDITORIAL_SYNC.md  ETAT_RECHERCHE_ET_ENJEUX_ACTUELS.md  GITHUB_PAGES_CONFIG.md  GITHUB_SYNC_INSTRUCTIONS.md  GUTENBERG_WIKIPEDIA_ARCHIVE_VALIDATION.md  LE_LIVRE_PANINI_BILAN_INTEGRAL.md  LIVRE_LEANPUB_2025.md  LIVRE_LEANPUB_2025_EN.md  LIVRE_LEANPUB_FINAL_2025.md  MIGRATION_MKDOCS_STRATEGY.md  MP4_PDF_PANINIFS_FOUNDATION.md  MULTILINGUAL_GUIDE.md  NEXT_TASKS_AI_AGENT.md  NOCTURNAL_ENHANCEMENTS_20250822.md  ORDRE_PUBLICATION_GUIDE.md  PANINIFS_MVP_AGILE_24H.md  PUBLICATION_COORDONNEE_20250820.md  (+105 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: pull_request_template.md
ARCHITECTURE/: ADR-2025-08-30-modular-restructuring-option-b.md  migration-checklist-option-b.md  module-contracts.md
scaffolds/execution-orchestrator/: README.md  pyproject.toml
scaffolds/execution-orchestrator/.github/workflows/: ci.yml
scaffolds/execution-orchestrator/src/execution_orchestrator/: cli.py
(+510 files in other folders)
