[package]
name = "panini-filesystem"
version = "0.1.0"
edition = "2021"
authors = ["Panini Development Team"]
description = "Revolutionary filesystem based on semantic compression and linguistic analysis"
license = "MIT"
repository = "https://github.com/stephanedenis/Panini-Filesystem"
keywords = ["filesystem", "semantic", "compression", "linguistics", "panini"]
categories = ["filesystem", "compression", "science"]

[dependencies]
# Core dependencies will be added as development progresses

[dev-dependencies]
# Test dependencies will be added as needed

[[bin]]
name = "panini-fs"
path = "src/main.rs"

[lib]
name = "panini_filesystem"
path = "src/lib.rs"
